added template for verifying email

--- a/static/email_templates/verify-email.html
+++ b/static/email_templates/verify-email.html
@@ -1,14 +1,10 @@
----
-Welcome to {{.AppName}}.
----
-!DOCTYPE html>
 <html>
 <head>
-    <title>Confirmation instructions</title>
+    <title>Verify email</title>
 </head>
 <body>
 <p>Welcome {{.Recipient}}!</p>
-<p>You can confirm your account email through the link below:</p>
+<p>You can verify your email through the link below:</p>
 <p><a href="{{.URL}}">Confirm my account</a></p>
 </body>
 </html>
