added template for reset password email

--- a/static/email_templates/reset-password.html
+++ b/static/email_templates/reset-password.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-    <title>Verify email</title>
+    <title>Reset password instructions</title>
 </head>
 <body>
-<p>Welcome {{.Recipient}}!</p>
-<p>You can verify your email through the link below:</p>
-<p><a href="{{.URL}}">Confirm my account</a></p>
+<p>Hello, {{.Recipient}}!</p>
+<p>We’ve received a request to change your password. If it was you, please confirm the password change.</p>
+<p><a href="{{.URL}}">Change password</a></p>
+<p>If you didn’t ask to reset your password, you can ignore this email.</p>
 </body>
 </html>
